# rest_api_python

./: README.md  Test_api.ipynb  pyproject.toml
django/countryapi/: db.sqlite3
django/countryapi/countries/: models.py  urls.py  views.py
django/countryapi/countries/migrations/: 0001_initial.py
django/countryapi/countryapi/: asgi.py  settings.py  urls.py  wsgi.py
