[tool.poetry]
name = "rest-api-python"
version = "0.1.0"
description = ""
authors = ["Alex_alonso_86 <aalonsocanales@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_api_python"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
