[tool.poetry]
name = "rest-api-python"
version = "0.1.0"
description = ""
authors = ["Alex_alonso_86 <aalonsocanales@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_api_python"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pre-commit = "^3.6.0"
notebook = "^7.0.6"
Django = "^5.0"
djangorestframework = "^3.14.0"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
